--- a/templates/auth_system/login.html
+++ b/templates/auth_system/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <form method="get" action="{% url 'login' %}">
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Login</button>
