--- a/templates/auth_system/register.html
+++ b/templates/auth_system/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <form method="post" action="{% url 'register' %}">
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Register</button>
