--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head, style="background-color: burlywood;font-family: Arial, Helvetica, sans-serif;">
+<head style="background-color: burlywood;font-family: Arial, Helvetica, sans-serif;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -10,7 +10,16 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    
+    {% if user.is_authenticated %}
+        Hello {{ user.username }}
+        <form method="post" action="{%url 'logout'%}">
+            {% csrf_token %}
+            <input type="submit" class="btn btn-warning" value="logout">
+        </form>
+
+    {% else %}
+        <a href="{% url 'register' %}" class="btn btn-warning">register</a>
+    {% endif %}
     <a href = "{% url 'create-apartment' %}" class="btn btn-primary">Створити квартиру</a>
     <a href = "{% url 'apartment-list' %}" class="btn btn-primary">Список квартир</a>
     {% block content %}
